tests/ui/feature-gates/feature-gate-cfg-boolean-literals.stderr
error[E0658]: `cfg(true)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-boolean-literals.rs:1:7
   |
LL | #[cfg(true)]
   |       ^^^^
   |
   = note: see issue #131204 <https://github.com/rust-lang/rust/issues/131204> for more information
   = help: add `#![feature(cfg_boolean_literals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `cfg(true)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-boolean-literals.rs:4:12
   |
LL | #[cfg_attr(true, cfg(false))]
   |            ^^^^
   |
   = note: see issue #131204 <https://github.com/rust-lang/rust/issues/131204> for more information
   = help: add `#![feature(cfg_boolean_literals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `cfg(false)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-boolean-literals.rs:4:22
   |
LL | #[cfg_attr(true, cfg(false))]
   |                      ^^^^^
   |
   = note: see issue #131204 <https://github.com/rust-lang/rust/issues/131204> for more information
   = help: add `#![feature(cfg_boolean_literals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `cfg(false)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-boolean-literals.rs:9:10
   |
LL |     cfg!(false);
   |          ^^^^^
   |
   = note: see issue #131204 <https://github.com/rust-lang/rust/issues/131204> for more information
   = help: add `#![feature(cfg_boolean_literals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
